bugfix: fixes chipwrap (#740)

--- a/src/viewerModule/viewerCmp/viewerCmp.style.css
+++ b/src/viewerModule/viewerCmp/viewerCmp.style.css
@@ -40,3 +40,8 @@
   position: sticky;
   bottom: 0.5rem;
 }
+
+:host >>> .mat-chip-list-wrapper
+{
+  flex-wrap: nowrap;
+}
